test_src/compiler_errors/types/arithmetic/MultiplyBoolError4.b
class MultiplyBoolError4 {
    void test() {
        var value = true;
        println(value *= 2);
    }
}
